# LR-demo

./: .ghci  .gitignore  BugLRec.hs  CFG.hs  CYK.hs  CharacterTokenGrammar.hs  DebugPrint.hs  LBNF.cf  LICENSE  LR-demo.cabal  LR.hs  Makefile  ParseTable.hs  README.md  Saturation.hs  SetMaybe.hs  Setup.hs  Util.hs  cabal.project.local  package.yaml  package.yaml.off
.github/workflows/: haskell-ci.yml
ParseTable/: Pretty.hs
lr-demo/: Main.hs
main-cyk/: CYK.hs
src/: .ghci  CFG.hs  CharacterTokenGrammar.hs  LBNF.cf  LR.hs  License.hs  Makefile  ParseTable.hs  Saturation.hs  SetMaybe.hs  Util.hs
src/ParseTable/: Pretty.hs
test/: BalancedParentheses.cf  BalancedParentheses.txt  ExpPlusTimesInteger.cf  LogicalExpressions.cf  LogicalExpressions.txt  Minus.cf  Minus.txt  RRecLRec.cf  RRecLRec.trace  RRecLRec.txt  Unguarded.cf
