cabal-version: 2.2

name:           LR-demo
version:        0.0.20241111
synopsis:       LALR(1) parsetable generator and interpreter
description:    An LALR(1) parsetable generator and interpreter.
category:       Parsing
author:         Andreas Abel <andreas.abel@gu.se>
maintainer:     Andreas Abel <andreas.abel@gu.se>
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Custom

tested-with:
    GHC == 9.12.0
    GHC == 9.10.1
    GHC == 9.8.2
    GHC == 9.6.6
    GHC == 9.4.8
    GHC == 9.2.8
    GHC == 9.0.2
    GHC == 8.10.7
    GHC == 8.8.4
    GHC == 8.6.5
    GHC == 8.4.4

extra-doc-files: README.md

custom-setup
  setup-depends:
      Cabal   >= 2.2   && < 4
        -- Distribution.Simple.BuildPaths.autogenPackageModulesDir is new in Cabal-2.0
        -- We use cabal-version: 2.2, so also Cabal >= 2.2 for the sake of Stack.
    , base    >= 4.11  && < 5
        -- Restrict to GHC >= 8.4 which ships Cabal-2.2 (otherwise Cabal has to be reinstalled)
    , process
    -- Adding BNFC here does not help because that only provides the BNFC _library_,
    -- not the _executable that_ we call from 'Setup.hs'.

library
  exposed-modules:
      CFG
      CharacterTokenGrammar
      DebugPrint
      License
      LBNF.Abs
      LBNF.Lex
      LBNF.Par
      LBNF.Print
      LR
      ParseTable
      ParseTable.Pretty
      Saturation
      SetMaybe
      Util
      Paths_LR_demo
  autogen-modules:
      LBNF.Abs
      LBNF.Lex
      LBNF.Par
      LBNF.Print
      Paths_LR_demo
  hs-source-dirs:
      src
  build-depends:
      array
    , base >=4.11 && <5
    , containers
    , microlens
    , microlens-th
    , mtl
    , string-qq
    , transformers
  build-tool-depends:
      BNFC:bnfc
    , alex:alex
    , happy:happy
  default-language: Haskell2010

executable lr-demo
  hs-source-dirs:   lr-demo
  main-is:          Main.hs
  build-depends:    LR-demo
  default-language: Haskell2010

-- executable cyk
--   main-is:          CYK.hs
--   hs-source-dirs:   main-cyk
--   ghc-options:      -main-is CYK
--   build-depends:
--       LR-demo
--     , base
--     , containers
--     , mtl
--     , transformers
--   default-language: Haskell2010
